--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "thai-lime1",
   "version": "0.1.0",
   "private": true,
+  "Homepage":"https//Vinoraj.gitgub.io/home",
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -13,6 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
+
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
